terraform/existing_vpc_resources/vpc_east.tf

locals {
  availability_zone_1 = "${var.aws_region}${var.availability_zone_1}"
}

locals {
  availability_zone_2 = "${var.aws_region}${var.availability_zone_2}"
}

locals {
  availability_zone_3 = var.availability_zone_3 != "" ? "${var.aws_region}${var.availability_zone_3}" : ""
}

locals {
  east_public_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 0)
  east_tgw_subnet_cidr_az1    = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 1)
  east_public_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 2)
  east_tgw_subnet_cidr_az2    = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 3)
  east_public_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 4)
  east_tgw_subnet_cidr_az3    = cidrsubnet(var.vpc_cidr_east, var.spoke_subnet_bits, 5)
}
#
# east VPC
#
module "vpc-east" {
  source     = "git::https://github.com/40netse/terraform-modules.git//aws_vpc"
  count      = var.enable_build_existing_subnets ? 1 : 0
  depends_on = [ module.vpc-transit-gateway.tgw_id ]
  vpc_name   = "${var.cp}-${var.env}-east-vpc"
  vpc_cidr   = var.vpc_cidr_east
  tags       = local.common_tags
}

module "subnet-east-public-az1" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = var.enable_build_existing_subnets ? 1 : 0

  subnet_name       = "${var.cp}-${var.env}-east-public-az1-subnet"
  vpc_id            = module.vpc-east[0].vpc_id
  availability_zone = local.availability_zone_1
  subnet_cidr       = local.east_public_subnet_cidr_az1
  tags              = local.common_tags
}
module "subnet-east-public-az2" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = var.enable_build_existing_subnets ? 1 : 0

  subnet_name                = "${var.cp}-${var.env}-east-public-az2-subnet"

  vpc_id                     = module.vpc-east[0].vpc_id
  availability_zone          = local.availability_zone_2
  subnet_cidr                = local.east_public_subnet_cidr_az2
  tags                       = local.common_tags
}

#
# TGW attachment subnets - dedicated subnets for TGW to avoid IP conflicts with EC2 instances
#
module "subnet-east-tgw-az1" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = var.enable_build_existing_subnets ? 1 : 0

  subnet_name       = "${var.cp}-${var.env}-east-tgw-az1-subnet"
  vpc_id            = module.vpc-east[0].vpc_id
  availability_zone = local.availability_zone_1
  subnet_cidr       = local.east_tgw_subnet_cidr_az1
  tags              = local.common_tags
}
module "subnet-east-tgw-az2" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = var.enable_build_existing_subnets ? 1 : 0

  subnet_name       = "${var.cp}-${var.env}-east-tgw-az2-subnet"
  vpc_id            = module.vpc-east[0].vpc_id
  availability_zone = local.availability_zone_2
  subnet_cidr       = local.east_tgw_subnet_cidr_az2
  tags              = local.common_tags
}
module "subnet-east-public-az3" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = (var.enable_build_existing_subnets && var.availability_zone_3 != "") ? 1 : 0

  subnet_name       = "${var.cp}-${var.env}-east-public-az3-subnet"
  vpc_id            = module.vpc-east[0].vpc_id
  availability_zone = local.availability_zone_3
  subnet_cidr       = local.east_public_subnet_cidr_az3
  tags              = local.common_tags
}
module "subnet-east-tgw-az3" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_subnet"
  count  = (var.enable_build_existing_subnets && var.availability_zone_3 != "") ? 1 : 0

  subnet_name       = "${var.cp}-${var.env}-east-tgw-az3-subnet"
  vpc_id            = module.vpc-east[0].vpc_id
  availability_zone = local.availability_zone_3
  subnet_cidr       = local.east_tgw_subnet_cidr_az3
  tags              = local.common_tags
}

#
# TGW subnet route table - routes traffic to TGW for internet egress
#
resource "aws_route_table" "east-tgw-rt" {
  count  = var.enable_build_existing_subnets ? 1 : 0
  vpc_id = module.vpc-east[0].vpc_id
  tags   = merge({ Name = "${var.cp}-${var.env}-east-tgw-rt" }, local.common_tags)
}
resource "aws_route_table_association" "east-tgw-az1" {
  count          = var.enable_build_existing_subnets ? 1 : 0
  subnet_id      = module.subnet-east-tgw-az1[0].id
  route_table_id = aws_route_table.east-tgw-rt[0].id
}
resource "aws_route_table_association" "east-tgw-az2" {
  count          = var.enable_build_existing_subnets ? 1 : 0
  subnet_id      = module.subnet-east-tgw-az2[0].id
  route_table_id = aws_route_table.east-tgw-rt[0].id
}
resource "aws_route_table_association" "east-tgw-az3" {
  count          = (var.enable_build_existing_subnets && var.availability_zone_3 != "") ? 1 : 0
  subnet_id      = module.subnet-east-tgw-az3[0].id
  route_table_id = aws_route_table.east-tgw-rt[0].id
}
resource "aws_route" "default-route-east-tgw-subnet" {
  depends_on             = [module.vpc-transit-gateway-attachment-east]
  count                  = var.enable_build_existing_subnets ? 1 : 0
  route_table_id         = aws_route_table.east-tgw-rt[0].id
  destination_cidr_block = "0.0.0.0/0"
  transit_gateway_id     = module.vpc-transit-gateway[0].tgw_id
}

#
# Default route table that is created with the main VPC.
#
resource "aws_default_route_table" "route_east" {
  count                  = var.enable_build_existing_subnets ? 1 : 0
  default_route_table_id = module.vpc-east[0].vpc_main_route_table_id
  tags                   = merge({ Name = "${var.cp}-${var.env}-east-vpc-main-route-table" }, local.common_tags)
}

resource "aws_route" "default-route-east-public" {
  depends_on             = [module.vpc-transit-gateway-attachment-east]
  count                  = var.enable_build_existing_subnets ? 1 : 0
  route_table_id         = module.vpc-east[0].vpc_main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  transit_gateway_id     = module.vpc-transit-gateway[0].tgw_id
}
resource "aws_route" "management-route-east-public" {
  depends_on             = [module.vpc-transit-gateway-attachment-east]
  count                  = (var.enable_build_existing_subnets && var.enable_build_management_vpc) ? 1 : 0
  route_table_id         = module.vpc-east[0].vpc_main_route_table_id
  destination_cidr_block = var.vpc_cidr_management
  transit_gateway_id     = module.vpc-transit-gateway[0].tgw_id
}
